force-app/main/default/objects/AIAgent__c/AIAgent__c.object-meta.xml
<CustomObject>
    <description>Defines an AI persona used within AI Assist, holding standing behavioral guardrails that apply consistently across all of its associated Prompt Templates. Each Agent is assigned a pool of Prompt Template records, dynamically selected at runtime based on record conditions, and a configurable set of Workflow Actions it is permitted to use.</description>
    <label>AI Agent</label>
    <nameField>
        <label>AI Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Agents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>