force-app/main/default/objects/AIAgent__c/fields/AIAgentPersona__c.field-meta.xml
<CustomField>
    <fullName>AIAgentPersona__c</fullName>
    <description>A short description of the role or character this agent plays when interacting with users.</description>
    <inlineHelpText>Describe how this agent should present itself - its role and general demeanor - in a sentence or two.</inlineHelpText>
    <label>AI Agent Persona</label>
    <type>TextArea</type>
</CustomField>