force-app/main/default/objects/AIAgent__c/fields/AIFallbackMessage__c.field-meta.xml
<CustomField>
    <fullName>AIFallbackMessage__c</fullName>
    <description>The message shown to the user when the AI call fails, times out, or the agent cannot complete the requested task.</description>
    <inlineHelpText>Write a plain-language message the end-user should see if something goes wrong, such as a timeout or failed response. Keep it reassuring and clear about next steps.</inlineHelpText>
    <label>AI Fallback Message</label>
    <type>TextArea</type>
</CustomField>