force-app/main/default/objects/AIAgent__c/fields/AIModelConfiguration__c.field-meta.xml
<CustomField>
    <fullName>AIModelConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The model configuration this agent uses for its AI calls, including which model, temperature, and cost settings apply.</description>
    <inlineHelpText>Select which model configuration this agent should call. Multiple agents can safely share the same configuration.</inlineHelpText>
    <label>AI Model Configuration</label>
    <referenceTo>AIModelConfiguration__c</referenceTo>
    <relationshipLabel>AI Agents</relationshipLabel>
    <relationshipName>AIAgents</relationshipName>
    <type>Lookup</type>
</CustomField>