force-app/main/default/objects/AIAgent__c/fields/AllowConversationResume__c.field-meta.xml
<CustomField>
    <fullName>AllowConversationResume__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a closed or idle-timed-out conversation can be reopened and continued.</description>
    <inlineHelpText>Turn this on to let users pick up where they left off.</inlineHelpText>
    <label>Allow Conversation Resume</label>
    <type>Checkbox</type>
</CustomField>