force-app/main/default/objects/AIAgent__c/fields/ConversationLoadTrigger__c.field-meta.xml
<CustomField>
    <fullName>ConversationLoadTrigger__c</fullName>
    <description>Determines when this agent&apos;s conversation history is loaded relative to the record page.</description>
    <inlineHelpText>Choose whether past conversation history should load automatically when the record page opens, only when the chat panel is opened, or only when the user explicitly requests it.</inlineHelpText>
    <label>Conversation Load Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Page Load</fullName>
            </value>
            <value>
                <fullName>On Chat Window Open</fullName>
            </value>
            <value>
                <fullName>Manual Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>