force-app/main/default/objects/AIAgent__c/fields/ConversationRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>ConversationRetentionDays__c</fullName>
    <description>The number of days a completed conversation and its messages are retained before being eligible for deletion.</description>
    <inlineHelpText>Set how long conversation history should be kept for this agent. Leave blank to retain indefinitely - do so deliberately given this may include customer-related content.</inlineHelpText>
    <label>Conversation Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>