force-app/main/default/objects/AIAgent__c/fields/ConversationVisibility__c.field-meta.xml
<CustomField>
    <fullName>ConversationVisibility__c</fullName>
    <description>Determines who can view a conversation besides the user who started it.</description>
    <inlineHelpText>Choose whether conversations should be visible only to the person who had them, or to anyone with access to the record.</inlineHelpText>
    <label>Conversation Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>