force-app/main/default/objects/AIAgent__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An admin-facing explanation of what this agent is for and when it should be used.</description>
    <inlineHelpText>Explain the purpose of this agent so someone reviewing the configuration later understands its intended use without needing to read every template.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>