force-app/main/default/objects/AIAgent__c/fields/GreetingMessage__c.field-meta.xml
<CustomField>
    <fullName>GreetingMessage__c</fullName>
    <description>The message shown to the user when a new conversation starts with this agent.</description>
    <inlineHelpText>Write a short opening message the agent should show at the start of a new conversation.</inlineHelpText>
    <label>Greeting Message</label>
    <type>TextArea</type>
</CustomField>