force-app/main/default/objects/AIAgent__c/fields/IdleTimeoutMinutes__c.field-meta.xml
<CustomField>
    <fullName>IdleTimeoutMinutes__c</fullName>
    <description>The number of minutes of inactivity before a conversation is automatically closed.</description>
    <inlineHelpText>Set how long a conversation can sit idle before it&apos;s considered ended. Helps avoid stale open sessions consuming context unnecessarily.</inlineHelpText>
    <label>Idle Timeout Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>