force-app/main/default/objects/AIAgent__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this agent is currently available for use.</description>
    <inlineHelpText>Turn this off to build or test an agent without exposing it to end users.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>