force-app/main/default/objects/AIAgent__c/fields/IsTestModeEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsTestModeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restricts this agent to admin or tester access only, without being visible to general end users, while still allowing real testing of its behavior.</description>
    <inlineHelpText>Turn this on while trialing a new or recently edited agent before rolling it out more widely.</inlineHelpText>
    <label>Is Test Mode Enabled</label>
    <type>Checkbox</type>
</CustomField>