force-app/main/default/objects/AIAgent__c/fields/MaxMessagesPerConversation__c.field-meta.xml
<CustomField>
    <fullName>MaxMessagesPerConversation__c</fullName>
    <description>Caps the number of messages allowed within a single conversation before it must be closed or restarted.</description>
    <inlineHelpText>Set a limit on how long a single conversation can run, to control cost and keep sessions focused.</inlineHelpText>
    <label>Max Messages Per Conversation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>