force-app/main/default/objects/AIAgent__c/fields/MaxTokensPerConversation__c.field-meta.xml
<CustomField>
    <fullName>MaxTokensPerConversation__c</fullName>
    <description>Caps the total token usage allowed across a single conversation, used to control AI cost per session.</description>
    <inlineHelpText>Set a token budget for a single conversation. Leave blank for no cap.</inlineHelpText>
    <label>Max Tokens Per Conversation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>