force-app/main/default/objects/AIAgent__c/fields/MaxToolCallingIterations__c.field-meta.xml
<CustomField>
    <fullName>MaxToolCallingIterations__c</fullName>
    <description>Caps how many callout/tool-call round trips AiAgentOrchestrator will make in a single turn before giving up, so a model that keeps requesting tools can&apos;t loop indefinitely. Agents configured with more tools, or tools that often chain together, may need a higher ceiling than a simple single-lookup agent.</description>
    <inlineHelpText>Set a ceiling on tool-calling round trips per turn for this Agent.</inlineHelpText>
    <label>Max Tool Calling Iterations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>