force-app/main/default/objects/AIAgent__c/fields/NoMatchBehavior__c.field-meta.xml
<CustomField>
    <fullName>NoMatchBehavior__c</fullName>
    <description>Determines what this agent does when no Prompt Template&apos;s Activation Criteria match the current record.</description>
    <inlineHelpText>Choose how this agent should behave if none of its templates are a clear fit for the current record.</inlineHelpText>
    <label>No Match Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closet Match</fullName>
            </value>
            <value>
                <fullName>Fallback Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>