force-app/main/default/objects/AIAgent__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>The object this agent is intended to run against by default, used to determine which agent loads on a given record page.</description>
    <inlineHelpText>Enter the API name of the object this agent should be associated with, such as Opportunity</inlineHelpText>
    <label>Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>