force-app/main/default/objects/AIAgent__c/fields/RetentionAction__c.field-meta.xml
<CustomField>
    <fullName>RetentionAction__c</fullName>
    <description>What happens to this Agent&apos;s conversations once they pass their Retention Expiry Date.</description>
    <inlineHelpText>Archive keeps the conversation and its messages but marks them archived. Anonymize additionally strips message content and record-level identifiers.</inlineHelpText>
    <label>Retention Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Anonymize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>