force-app/main/default/objects/AIAgent__c/fields/RetentionTrigger__c.field-meta.xml
<CustomField>
    <fullName>RetentionTrigger__c</fullName>
    <description>Determines which date starts the retention countdown for a conversation.</description>
    <inlineHelpText>Choose what the retention period should count from.</inlineHelpText>
    <label>Retention Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conversation Created Date</fullName>
            </value>
            <value>
                <fullName>Conversation Closed Date</fullName>
            </value>
            <value>
                <fullName>Last Message Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>