force-app/main/default/objects/AIAgent__c/fields/SetupCurrentStep__c.field-meta.xml
<CustomField>
    <fullName>SetupCurrentStep__c</fullName>
    <description>Which step of the Agent Builder wizard this agent was on when it was last saved.</description>
    <inlineHelpText>Used to resume an in-progress build at the correct step. Updated automatically — no manual entry needed.</inlineHelpText>
    <label>Setup Current Step</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>