force-app/main/default/objects/AIAgent__c/fields/SetupLastEdited__c.field-meta.xml
<CustomField>
    <fullName>SetupLastEdited__c</fullName>
    <description>The date and time this agent&apos;s configuration was last edited in the wizard.</description>
    <inlineHelpText>Drives the &quot;last edited&quot; display shown on the in-progress drafts list. Updated automatically.</inlineHelpText>
    <label>Setup Last Edited</label>
    <type>DateTime</type>
</CustomField>