force-app/main/default/objects/AIAgent__c/fields/SetupStatus__c.field-meta.xml
<CustomField>
    <fullName>SetupStatus__c</fullName>
    <description>The overall build state of this agent within the Agent Builder wizard.</description>
    <inlineHelpText>Reflects how far along this agent&apos;s configuration is. Updates automatically as each wizard step is saved.</inlineHelpText>
    <label>Setup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>