force-app/main/default/objects/AIAgent__c/fields/SingleActiveConversationPer_Record__c.field-meta.xml
<CustomField>
    <fullName>SingleActiveConversationPer_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restricts a record to only one open conversation at a time for this agent, rather than allowing multiple concurrent sessions.</description>
    <inlineHelpText>Turn this on to prevent multiple simultaneous conversations on the same record, which can otherwise create confusing or conflicting context.</inlineHelpText>
    <label>Single Active Conversation Per Record</label>
    <type>Checkbox</type>
</CustomField>