force-app/main/default/objects/AIAgent__c/fields/TokenTrackingMethod__c.field-meta.xml
<CustomField>
    <fullName>TokenTrackingMethod__c</fullName>
    <description>Determines how this agent enforces Max Tokens Per Conversation - by estimating usage from character count, tracking actual usage returned from the AI after each turn, or checking usage before a request is sent.</description>
    <inlineHelpText>Choose how token limits should be enforced. Estimate Token Usage is fastest but approximate. Track Token Usage uses actual usage data from each response and enforces the limit between turns. Pre-Request Usage Check calls a token-count check before sending each request for the most accurate enforcement, at the cost of an extra call per turn.</inlineHelpText>
    <label>Token Tracking Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estimate Token Usage</fullName>
            </value>
            <value>
                <fullName>Track Token Usage</fullName>
            </value>
            <value>
                <fullName>Pre-Request Usage Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>