force-app/main/default/objects/AIAgent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>ObjectType__c</columns>
    <columns>AIModelConfiguration__c</columns>
    <columns>AIAgentPersona__c</columns>
    <columns>SetupStatus__c</columns>
    <columns>IsTestModeEnabled__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>